fixed overflow on tabs

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -28,7 +28,7 @@ nav {
 
 nav .nav {
   display: flex;
-  padding: 20px 40px;
+  padding: 10px 20px;
   justify-content: space-between;
   color: white;
   font-size: 28px;
@@ -119,6 +119,7 @@ nav .nav i {
   padding: 8px 16px;
   font-size: 0.9rem;
   font-weight: bolder;
+  margin: 10px 0px;
 }
 
 .profile .about .abouttext .col .cv {
@@ -134,7 +135,7 @@ nav .nav i {
 
 .profile .doing {
   width: 50%;
-  padding: 60px 40px 50px 40px;
+  padding: 60px 20px 50px 20px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -452,7 +453,6 @@ nav .nav i {
 }
 
 .time .timeline {
-  color: pink;
   position: relative;
   max-width: 900px;
   margin: 0 auto;
@@ -463,7 +463,6 @@ nav .nav i {
   position: relative;
   background-color: inherit;
   width: 50%;
-  margin: 15px 0px;
 }
 
 .time .container::after {
@@ -481,10 +480,12 @@ nav .nav i {
 
 .time .left {
   left: 0;
+  margin-right: 50%;
 }
 
 .time .right {
   left: 50%;
+  margin-right: 50%;
 }
 
 .time .left::before {
@@ -650,7 +651,7 @@ nav .nav i {
 }
 
 footer {
-  padding: 50px;
+  padding: 40px;
   background: rgba(0, 0, 0, 0.8);
   display: flex;
   flex-direction: column;
@@ -677,11 +678,15 @@ footer h6 a:hover {
   text-decoration: none;
 }
 
+footer .container {
+  max-width: 700px;
+}
+
 footer .social {
   display: flex;
-  width: 600px;
+  width: 500px;
   justify-content: space-around;
-  margin: 50px auto;
+  margin: 20px auto;
 }
 
 footer .social a {
@@ -750,6 +755,12 @@ footer .social .linkedin:hover {
   }
   .time .right::after {
     left: 15px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
   }
 }
  
