--- a/assets/css/base/_mediaqueries.sass
+++ b/assets/css/base/_mediaqueries.sass
@@ -24,6 +24,10 @@
       left: 0%
     .right::after
       left: 15px
+
+@media screen and (min-width: 768px)
+  .container
+    max-width: 768px
 //@media screen and (max-width: 425px)
 //@media screen and (max-height: 425px)
 //@media screen and (max-width: 320px)
