--- a/assets/css/pages/_morrison.sass
+++ b/assets/css/pages/_morrison.sass
@@ -5,7 +5,7 @@ nav
 
   .nav
     display: flex
-    padding: 20px 40px
+    padding: 10px 20px
     justify-content: space-between
     color: white
     font-size: 28px
@@ -84,6 +84,7 @@ nav
           padding: 8px 16px
           font-size: 0.9rem
           font-weight: bolder
+          margin: 10px 0px
           
         .cv
           margin-right: 20px
@@ -96,7 +97,7 @@ nav
   
   .doing
     width: 50%
-    padding: 60px 40px 50px 40px
+    padding: 60px 20px 50px 20px
     display: flex
     flex-direction: column
     justify-content: space-between
@@ -347,7 +348,7 @@ nav
 .time
   padding: 10px 0px 60px 0px
   font-size: 1rem
-  
+
   h3
     margin: 50px 0px
     text-align: center
@@ -365,7 +366,6 @@ nav
     margin-left: -3px
   
   .timeline
-    color: pink
     position: relative
     max-width: 900px
     margin: 0 auto
@@ -375,7 +375,6 @@ nav
     position: relative
     background-color: inherit
     width: 50%
-    margin: 15px 0px
 
   .container::after
     content: ''
@@ -391,9 +390,11 @@ nav
 
   .left
     left: 0
+    margin-right: 50%
 
   .right
     left: 50%
+    margin-right: 50%
 
   .left::before
     content: " "
@@ -424,8 +425,6 @@ nav
 
   .content
     position: relative
-
-
 
   .left
     text-align: right
@@ -533,7 +532,7 @@ nav
           opacity: 1
 
 footer
-  padding: 50px
+  padding: 40px
   background: rgba(0,0,0,0.8)
   display: flex
   flex-direction: column
@@ -554,12 +553,15 @@ footer
       &:hover
         color: lightgreen
         text-decoration: none
+
+  .container
+    max-width: 700px
   
   .social
     display: flex
-    width: 600px
+    width: 500px
     justify-content: space-around
-    margin: 50px auto
+    margin: 20px auto
 
     a
       color: white
